minor fix to icon spacing - iPhone6 browser compatibility

--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -102,6 +102,8 @@
 		width: 100%;
 		margin: 30px auto;
 		padding: 0;
+		position: relative;
+		left: 2px;
 		li {
 			width: 40px;
 			margin: 12px;
